# memorable-agent

./: .env  checkpoints.sqlite  main.py  memories.index  memories_meta.json  memory_bot.py  pyproject.toml
server/: memory.py
static/: index.html
