[project]
name = "memorable-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=0.3.25",
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.4.3",
    "websockets>=15.0.1",
    "fastapi>=0.115.12",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "ipython>=9.2.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
]
